--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+/[Bb]in/
 /Assets/AssetStoreTools*
+/ArtSource/geo/
+/ArtSource/backup/
 
 # Visual Studio 2015 cache directory
 /.vs/
