--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,7 +3,9 @@
     "com.unity.burst": "0.2.4-preview.34",
     "com.unity.entities": "0.0.12-preview.19",
     "com.unity.jobs": "0.0.7-preview.5",
+    "com.unity.mathematics": "0.0.12-preview.19",
     "com.unity.package-manager-ui": "1.9.11",
+    "com.unity.postprocessing": "2.0.17-preview",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
