--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 /[Bb]uilds/
 /[Bb]in/
 /Assets/AssetStoreTools*
-/ArtSource/geo/
-/ArtSource/backup/
+/ArtSource
 
 # Visual Studio 2015 cache directory
 /.vs/
