--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.unity.burst": "0.2.4-preview.34",
+    "com.unity.burst": "0.2.4-preview.37",
+    "com.unity.collections": "0.0.9-preview.9",
     "com.unity.entities": "0.0.12-preview.19",
     "com.unity.jobs": "0.0.7-preview.5",
     "com.unity.mathematics": "0.0.12-preview.19",
