--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "com.unity.burst": "0.2.4-preview.37",
+    "com.unity.collab-proxy": "1.2.15",
     "com.unity.collections": "0.0.9-preview.9",
     "com.unity.entities": "0.0.12-preview.19",
     "com.unity.jobs": "0.0.7-preview.5",
     "com.unity.mathematics": "0.0.12-preview.19",
-    "com.unity.package-manager-ui": "1.9.11",
+    "com.unity.package-manager-ui": "2.0.3",
     "com.unity.postprocessing": "2.0.17-preview",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
