--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
-    "com.unity.burst": "0.2.4-preview.37",
+    "com.unity.burst": "0.2.4-preview.45",
     "com.unity.collab-proxy": "1.2.15",
-    "com.unity.collections": "0.0.9-preview.9",
-    "com.unity.entities": "0.0.12-preview.19",
-    "com.unity.jobs": "0.0.7-preview.5",
-    "com.unity.mathematics": "0.0.12-preview.19",
+    "com.unity.collections": "0.0.9-preview.11",
+    "com.unity.entities": "0.0.12-preview.23",
+    "com.unity.jobs": "0.0.7-preview.6",
+    "com.unity.mathematics": "0.0.12-preview.20",
     "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.postprocessing": "2.0.17-preview",
+    "com.unity.postprocessing": "2.1.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
@@ -37,6 +37,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.unity.rendering.hybrid": "0.0.1-preview.3",
+    "com.unity.test-framework.performance": "0.1.50-preview"
   }
 }
