--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,18 +1,28 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "2.0.8",
-    "com.unity.analytics": "3.3.2",
-    "com.unity.burst": "1.0.0",
+    "com.unity.analytics": "3.3.5",
+    "com.unity.burst": "1.2.1",
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.entities": "0.0.12-preview.30",
-    "com.unity.jobs": "0.0.7-preview.10",
-    "com.unity.package-manager-ui": "2.1.2",
+    "com.unity.collections": "0.5.1-preview.11",
+    "com.unity.entities": "0.5.1-preview.11",
+    "com.unity.ide.rider": "1.1.4",
+    "com.unity.ide.vscode": "1.1.4",
+    "com.unity.jobs": "0.2.4-preview.11",
+    "com.unity.multiplayer-hlapi": "1.0.4",
+    "com.unity.postprocessing": "2.3.0",
     "com.unity.purchasing": "2.0.6",
-    "com.unity.rendering.hybrid": "0.0.1-preview.10",
-    "com.unity.textmeshpro": "2.0.0",
-    "com.unity.timeline": "1.0.0",
+    "com.unity.rendering.hybrid": "0.3.3-preview.11",
+    "com.unity.scriptablebuildpipeline": "1.6.3-preview",
+    "com.unity.test-framework": "1.1.9",
+    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.timeline": "1.2.10",
+    "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "1.3.8",
     "com.unity.modules.ai": "1.0.0",
-    "com.unity.postprocessing": "2.1.3",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
